[gd_scene load_steps=14 format=2]

[ext_resource path="res://objects/UI/battle/CardGUI.gd" type="Script" id=1]
[ext_resource path="res://resources/cards/Card.gd" type="Script" id=2]
[ext_resource path="res://assets/images/ui/Act.png" type="Texture" id=3]
[ext_resource path="res://assets/images/ui/React.png" type="Texture" id=4]
[ext_resource path="res://assets/images/card_bases/CardHighlight.png" type="Texture" id=5]
[ext_resource path="res://assets/images/card_bases/AllClassCard.png" type="Texture" id=6]
[ext_resource path="res://assets/images/card_art/empty.png" type="Texture" id=7]
[ext_resource path="res://resources/fonts/Fenix-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://resources/fonts/Fenix.tres" type="DynamicFontData" id=9]
[ext_resource path="res://resources/fonts/Card_AP.tres" type="DynamicFont" id=10]
[ext_resource path="res://resources/themes/custom/new_theme2.tres" type="Theme" id=11]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 18
outline_size = 2
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 20
outline_size = 2
outline_color = Color( 0.223529, 0.156863, 0.0313726, 1 )
use_filter = true
font_data = ExtResource( 9 )

[node name="CardGUI" type="Control"]
theme = ExtResource( 11 )
script = ExtResource( 1 )

[node name="CardActor" type="Node" parent="."]
script = ExtResource( 2 )

[node name="CardHighlight" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.5 )
margin_left = -113.0
margin_top = -158.0
margin_right = 113.0
margin_bottom = 158.0
mouse_filter = 2
texture = ExtResource( 5 )

[node name="CardArt" type="Sprite" parent="."]
position = Vector2( 0, -64 )
texture = ExtResource( 7 )

[node name="CardFront" type="TextureRect" parent="."]
margin_left = -105.0
margin_top = -150.0
margin_right = 105.0
margin_bottom = 150.0
mouse_filter = 2
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -105.0
margin_top = -150.0
margin_right = 105.0
margin_bottom = 7.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 210.0
margin_bottom = 30.0
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_bottom = 30.0
mouse_filter = 2

[node name="AP" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 4.0
margin_right = 34.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
text = "1"
align = 1
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 38.0
margin_right = 38.0
margin_bottom = 30.0
mouse_filter = 2

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 38.0
margin_top = 4.0
margin_right = 202.0
margin_bottom = 25.0
rect_min_size = Vector2( 164, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.223529, 0.156863, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "Stone Throw"
align = 1
valign = 1
clip_text = true
max_lines_visible = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 210.0
margin_bottom = 132.0
rect_min_size = Vector2( 210, 94 )
mouse_filter = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 140.0
margin_right = 210.0
margin_bottom = 159.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 30.0
margin_bottom = 19.0
rect_min_size = Vector2( 30, 0 )
mouse_filter = 2

[node name="Type" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 34.0
margin_right = 176.0
margin_bottom = 19.0
rect_min_size = Vector2( 142, 0 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Physical Attack"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
visible = false
margin_top = 163.0
margin_right = 210.0
margin_bottom = 163.0
mouse_filter = 2

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.503997
anchor_top = 0.497485
anchor_right = 0.503997
anchor_bottom = 0.497485
margin_left = -105.0
margin_top = -150.0
margin_right = 105.0
margin_bottom = 150.0
rect_min_size = Vector2( 210, 300 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AP_Hint" type="MarginContainer" parent="TextureButton"]
margin_right = 39.0
margin_bottom = 39.0

[node name="Act" type="TextureRect" parent="TextureButton"]
margin_left = 3.0
margin_top = 138.0
margin_right = 33.0
margin_bottom = 162.0
hint_tooltip = "This card can be played as an action."
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="React" type="TextureRect" parent="TextureButton"]
margin_left = 181.0
margin_top = 135.5
margin_right = 206.0
margin_bottom = 164.5
hint_tooltip = "This card can be played as a reaction."
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="TextureButton"]
margin_top = 164.0
margin_right = 210.0
margin_bottom = 268.0

[node name="MarginContainer" type="MarginContainer" parent="TextureButton/HBoxContainer3"]
margin_right = 7.0
margin_bottom = 104.0
rect_min_size = Vector2( 7, 0 )
mouse_filter = 2

[node name="Description" type="RichTextLabel" parent="TextureButton/HBoxContainer3"]
margin_left = 11.0
margin_right = 199.0
margin_bottom = 104.0
rect_min_size = Vector2( 188, 104 )
mouse_filter = 1
bbcode_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="TextureButton"]
margin_top = 272.0
margin_right = 210.0
margin_bottom = 295.0

[node name="MarginContainer" type="MarginContainer" parent="TextureButton/HBoxContainer"]
margin_right = 30.0
margin_bottom = 23.0
rect_min_size = Vector2( 30, 0 )
hint_tooltip = "This card's delay in turns."
mouse_filter = 1

[node name="Delay" type="Label" parent="TextureButton/HBoxContainer"]
margin_left = 34.0
margin_right = 78.0
margin_bottom = 23.0
rect_min_size = Vector2( 44, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "100"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="TextureButton/HBoxContainer"]
margin_left = 82.0
margin_right = 128.0
margin_bottom = 23.0
rect_min_size = Vector2( 46, 0 )
mouse_filter = 2

[node name="Range" type="Label" parent="TextureButton/HBoxContainer"]
margin_left = 132.0
margin_right = 176.0
margin_bottom = 23.0
rect_min_size = Vector2( 44, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "2 - 2"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="TextureButton/HBoxContainer"]
margin_left = 180.0
margin_right = 210.0
margin_bottom = 23.0
rect_min_size = Vector2( 30, 0 )
hint_tooltip = "This card's range in tiles."
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -96.0
margin_top = -118.0
margin_right = 96.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="CardHighlight" to="." method="_on_CardHighlight_mouse_entered"]
[connection signal="mouse_exited" from="CardHighlight" to="." method="_on_CardHighlight_mouse_exited"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
